Fix width on mobile header

--- a/src/app/components/landing/landing.scss
+++ b/src/app/components/landing/landing.scss
@@ -170,9 +170,6 @@
     h2{
       font-size:25px;
     }
-    .heading-over-video{
-      width:90%;
-    }
     .text-funding{
        text-align: center;
     }
